--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -199,50 +199,7 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2010.09891" target="_blank">
-                  FLAG: Adversarial Data Augmentation for Graph Neural Networks</a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                28th of September 2021
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Kezhi Kong, Guohao Li, Mucong Ding, Zuxuan Wu, Chen Zhu, Bernard Ghanem, Gavin Taylor, Tom Goldstein
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              First author <a
-              href="https://scholar.google.com/citations?user=MG46jrMAAAAJ&hl=en" target="_blank"
-              class="link-style-green">Kezhi Kong</a> who is a PhD student at the University of Maryland. Advised by
-              Prof. Tom Goldstein, he does research in Machine Learning, with a focus on Graph Learning and Adversarial
-              Attacks/Defenses.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Data augmentation helps neural networks generalize better, but it remains an open question how to
-              effectively augment graph data to enhance the performance of GNNs (Graph Neural Networks). While most
-              existing graph regularizers focus on augmenting graph topological structures by adding/removing edges, we
-              offer a novel direction to augment in the input node feature space for better performance. We propose a
-              simple but effective solution, FLAG (Free Large-scale Adversarial Augmentation on Graphs), which
-              iteratively augments node features with gradient-based adversarial perturbations during training, and
-              boosts performance at test time. Empirically, FLAG can be easily implemented with a dozen lines of code
-              and is flexible enough to function with any GNN backbone, on a wide variety of large-scale datasets, and
-              in both transductive and inductive settings. Without modifying a model's architecture or training setup,
-              FLAG yields a consistent and salient performance boost across both node and graph classification tasks.
-              Using FLAG, we reach state-of-the-art performance on the large-scale ogbg-molpcba, ogbg-ppa, and ogbg-code
-              datasets.
-            </p>
-          </div>
 
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
 
@@ -489,6 +446,57 @@
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2010.09891" target="_blank">
+                  FLAG: Adversarial Data Augmentation for Graph Neural Networks</a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                28th of September 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Kezhi Kong, Guohao Li, Mucong Ding, Zuxuan Wu, Chen Zhu, Bernard Ghanem, Gavin Taylor, Tom Goldstein
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                Kezhi's
+                <a href="https://hannes-stark.com/assets/.pdf" target="_blank"
+                   class="link-style-green">slides</a> are coming soon!
+                (46 participants)
+              </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author <a
+              href="https://scholar.google.com/citations?user=MG46jrMAAAAJ&hl=en" target="_blank"
+              class="link-style-green">Kezhi Kong</a> who is a PhD student at the University of Maryland. Advised by
+              Prof. Tom Goldstein, he does research in Machine Learning, with a focus on Graph Learning and Adversarial
+              Attacks/Defenses.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Data augmentation helps neural networks generalize better, but it remains an open question how to
+              effectively augment graph data to enhance the performance of GNNs (Graph Neural Networks). While most
+              existing graph regularizers focus on augmenting graph topological structures by adding/removing edges, we
+              offer a novel direction to augment in the input node feature space for better performance. We propose a
+              simple but effective solution, FLAG (Free Large-scale Adversarial Augmentation on Graphs), which
+              iteratively augments node features with gradient-based adversarial perturbations during training, and
+              boosts performance at test time. Empirically, FLAG can be easily implemented with a dozen lines of code
+              and is flexible enough to function with any GNN backbone, on a wide variety of large-scale datasets, and
+              in both transductive and inductive settings. Without modifying a model's architecture or training setup,
+              FLAG yields a consistent and salient performance boost across both node and graph classification tasks.
+              Using FLAG, we reach state-of-the-art performance on the large-scale ogbg-molpcba, ogbg-ppa, and ogbg-code
+              datasets.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
