--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -467,8 +467,8 @@
             <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Kezhi's
-                <a href="https://hannes-stark.com/assets/.pdf" target="_blank"
-                   class="link-style-green">slides</a> are coming soon!
+                <a href="https://hannes-stark.com/assets/FLAG_slides.pdf" target="_blank"
+                   class="link-style-green">slides</a>.
                 (46 participants)
               </p>
             <p class="paragraph">
