--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -522,7 +522,7 @@
                 <a class="slight-bold">Resources:</a>
                 Devin's
                 <a href="https://hannes-stark.com/assets/spectral_attention_networks.pdf" target="_blank"
-                   class="link-style-green">slides</a>. Recording is coming soon!
+                   class="link-style-green">slides</a>.
                 (69 participants)
               </p>
               <p class="paragraph">
