--- a/src/app/reading-group/reading-group.component.scss
+++ b/src/app/reading-group/reading-group.component.scss
@@ -218,6 +218,13 @@ h3 {
   font-size: 20px;
 }
 
+.item-title2 {
+  margin: 0;
+  margin-bottom: 3px;
+  font-weight: 480;
+  font-size: 18px;
+}
+
 .item-subtitle {
   color: var(--color-primary);
   font-weight: 520;
