--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -469,7 +469,7 @@
             <p class="paragraph">
               <a class="slight-bold">Resources:</a>
               Haiyang's
-              <a href="https://hannes-stark.com/assets/.pdf" target="_blank"
+              <a href="https://hannes-stark.com/assets/On Explainability of Graph Neural Networks via Subgraph.pdf" target="_blank"
                  class="link-style-green">slides</a>.
               (59 participants)
             </p>
