--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -15,14 +15,15 @@
           <p class="text-align-left">
             Hi! I am an MIT Research Intern with an M.Sc. Informatics from TU Munich.
             <br>
-            My current research is on geometric DL for protein binding in Prof. <a
+            My current research is on geometric DL for protein binding with Dr. <a href="https://people.csail.mit.edu/oct/" target="_blank"
+                     class="link-style-green">Octavian Ganea</a> in Prof. <a
             href="https://www.regina.csail.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay's</a> and
             Prof. <a href="http://people.csail.mit.edu/tommi/" target="_blank"
-                     class="link-style-green">Tommi Jaakkola's</a> lab at MIT.
+                     class="link-style-green">Tommi Jaakkola's</a> group.
             My main interests are geometric deep learning, graphs, and self-supervised
             learning.
             <br>
-            Consider joining my <a [routerLink]="['logag-reading-group']" class="link-style-green">reading group</a>
+            Consider joining my weekly <a [routerLink]="['logag-reading-group']" class="link-style-green">reading group</a>
             about learning on graphs and geometry!
           </p>
           <p> I am always happy to chat about research or anything else! So feel free to contact me:
