--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -210,12 +210,15 @@
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              First author of the paper Dr.
-              <a href="https://urialon.ml/" target="_blank"
-                 class="link-style-green">Uri Alon</a> who obtained his PhD at Technion advised by Prof.
-              <a href="https://www.cs.technion.ac.il/~yahave/" target="_blank"
-                 class="link-style-green">Eran Yahav</a> and is now a PostDoc at Carnegie Mellon University working on
-              generating source code where GNNs find many applications.
+              First author of the paper Dr. <a href="https://urialon.ml/" target="_blank"
+                 class="link-style-green">Uri Alon</a> who obtained my PhD at Technion (Israel), advised by Prof. <a href="https://www.cs.technion.ac.il/~yahave/" target="_blank"
+                 class="link-style-green">Eran Yahav</a>. He is now a Postdoctoral Researcher at the Language Technologies Institute of Carnegie Mellon
+              University, working with Prof. <a href="http://www.phontron.com/" target="_blank"
+                 class="link-style-green">Graham Neubig</a> on NLP and learning from source code, where GNNs find many
+              applications. My most recent GNN work includes "<a href="https://openreview.net/pdf?id=i80OPhOCVH2" target="_blank"
+                 class="link-style-green">On the Bottleneck of Graph Neural Networks and its
+              Practical Implications</a>" and "<a href="https://arxiv.org/pdf/2105.14491.pdf" target="_blank"
+                 class="link-style-green">How Attentive are Graph Attention Networks?</a>".
             </p>
             <p class="no-margin">
               <a class="slight-bold">Abstract:</a>
@@ -469,7 +472,8 @@
             <p class="paragraph">
               <a class="slight-bold">Resources:</a>
               Haiyang's
-              <a href="https://hannes-stark.com/assets/On Explainability of Graph Neural Networks via Subgraph.pdf" target="_blank"
+              <a href="https://hannes-stark.com/assets/On Explainability of Graph Neural Networks via Subgraph.pdf"
+                 target="_blank"
                  class="link-style-green">slides</a>.
               (59 participants)
             </p>
