--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -589,13 +589,13 @@
                   <a class="item-title">3D Pre-training improves GNNs for Molecular Property Prediction</a>
                   <div fxLayout="row">
                     <h3>
-                      <a class="item-subtitle link-style-black" href="http://talks.cam.ac.uk/show/index/99646/"
+                      <a class="item-subtitle link-style-black" href="http://talks.cam.ac.uk/talk/index/162541"
                          target="_blank">
                         Cambridge Computer Laboratory AI Research Talk</a></h3>
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                    Sept 2021
+                    Oct 2021
                     <a fxHide.xs>
                       <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
                       Remote
