--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -15,15 +15,17 @@
           <p class="text-align-left">
             Hi! I am an MIT Research Intern with an M.Sc. Informatics from TU Munich.
             <br>
-            My current research is on geometric DL for protein binding with Dr. <a href="https://people.csail.mit.edu/oct/" target="_blank"
-                     class="link-style-green">Octavian Ganea</a> in Prof. <a
+            My current research is on geometric DL for protein binding with Dr. <a
+            href="https://people.csail.mit.edu/oct/" target="_blank"
+            class="link-style-green">Octavian Ganea</a> in Prof. <a
             href="https://www.regina.csail.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay's</a> and
             Prof. <a href="http://people.csail.mit.edu/tommi/" target="_blank"
                      class="link-style-green">Tommi Jaakkola's</a> group.
             My main interests are geometric deep learning, graphs, and self-supervised
             learning.
             <br>
-            Consider joining my weekly <a [routerLink]="['logag-reading-group']" class="link-style-green">reading group</a>
+            Consider joining my weekly <a [routerLink]="['logag-reading-group']" class="link-style-green">reading
+            group</a>
             about learning on graphs and geometry!
           </p>
           <p> I am always happy to chat about research or anything else! So feel free to contact me:
@@ -823,10 +825,9 @@
                     </a>
                   </p>
                   <p class="item-content">I mainly worked in an agile Web-Development team where I maintained digital
-                    infrastructure and wrote code for a customer management application.
-                    I learned a lot about software engineering, best coding practices and teamwork. In a side project I
-                    designed and developed an app for organizing large software releases together with five other
-                    students.
+                    infrastructure and wrote code for a customer management application. I learned a lot about software
+                    engineering, best coding practices, and teamwork. In a side project, I designed and developed an app
+                    for organizing large software releases together with five other students.
                 </div>
               </div>
             </div>
@@ -1059,7 +1060,7 @@
                       Remote
                     </a>
                   </p>
-                  <p class="item-content">Reviewing graph representation learning and NLP papers.
+                  <p class="item-content">Reviewing four graph representation learning and time series analysis papers.
                   </p>
                 </div>
                 <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
