--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -267,9 +267,7 @@
                 <p class="item-content">
                   • 2nd Year: Networking, statistics, and advanced maths<br>
                   • 1st Year: Mathematics, algorithms, and programming foundations<br>
-                  The dual study program of the Bundeswehr University in cooperation with Allianz AG
-                  combines theoretical training with
-                  practical work experience. Usually the curriculum takes three years but I attained all ECTS and got my
+                  Usually, the curriculum takes three years but I attained all ECTS and got my
                   degree in two years.
                 </p>
               </div>
@@ -748,7 +746,7 @@
                     </a>
                   </p>
                   <p class="item-content">
-                    I am teaching linear algebra, analysis and statistics in small group lessons and sometimes
+                    I am teaching linear algebra, analysis, and statistics in small group lessons and sometimes
                     individual
                     lessons.
                     The activity also involves a lot of student mediation and counseling to ensure student wellbeing.
@@ -800,9 +798,9 @@
                       Munich, Germany
                     </a>
                   </p>
-                  <p class="item-content">In the beginning I implemented and evaluated different methods for regression
+                  <p class="item-content">In the beginning, I implemented and evaluated different methods for regression
                     on
-                    time-series data like SARIMA, ARIMAX and LSTMs.
+                    time-series data like SARIMA, ARIMAX, and LSTMs.
                     After that project was done I worked on causal inference for train traffic data using structure
                     learning
                     for bayesian inference and I evaluated the approaches with data from Anylogic simulations.</p>
